tests/dataset/tpc-ds/compiler/rust/q67.error
rustc: exit status 1
warning: type `Store_sale` should have an upper camel case name
 --> /tmp/q67.rs:3:8
  |
3 | struct Store_sale {
  |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

error[E0308]: mismatched types
  --> /tmp/q67.rs:27:23
   |
27 |     assert!(result == 67 as f64);
   |             ------    ^^^^^^^^^ expected `i32`, found `f64`
   |             |
   |             expected because this is `i32`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
